added text of part 1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Название</h1>
+    <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Дороге, это послушавшись первую города единственное запятых безопасную толку. Он путь вдали использовало запятой возвращайся речью моей текстами назад единственное!</p>
+    <a href="#header">Link text</a>
+    <h2>Часть1</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit, eum itaque quos rerum nobis molestias id asperiores veniam impedit nisi ex amet tenetur optio est illo quidem maxime mollitia ea?</p>
 </body>
 </html>
